<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ActivityA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_email"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/placeholder_email"
            android:padding="13dp"
            android:background="@drawable/et_border"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/str_password"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/placeholder_password"
            android:padding="13dp"
            android:background="@drawable/et_border"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_A"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/str_buttonA"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textAllCaps="false"/>

</RelativeLayout>